Home Office 1 to 1 messages like in skype

--- a/src/ZectranetBundle/Resources/config/routing.yml
+++ b/src/ZectranetBundle/Resources/config/routing.yml
@@ -557,4 +557,4 @@ zectranet_send_conversation_message:
 
 zectranet_get_project_settings_info:
     pattern: /project/get/settings/info/{project_id}
-    defaults: { _controller: ZectranetBundle:Conversation:getProjectSettingsInfo }
+    defaults: { _controller: ZectranetBundle:HeaderForum:getProjectSettingsInfo }
