--- a/src/ZectranetBundle/Resources/config/routing.yml
+++ b/src/ZectranetBundle/Resources/config/routing.yml
@@ -554,3 +554,7 @@ zectranet_get_conversation:
 zectranet_send_conversation_message:
     pattern: /user/send/conversation/message/{conversation_id}
     defaults: { _controller: ZectranetBundle:Conversation:sendMessage }
+
+zectranet_get_project_settings_info:
+    pattern: /project/get/settings/info/{project_id}
+    defaults: { _controller: ZectranetBundle:Conversation:getProjectSettingsInfo }
