HFForum Send Request

--- a/src/ZectranetBundle/Resources/config/routing.yml
+++ b/src/ZectranetBundle/Resources/config/routing.yml
@@ -545,3 +545,7 @@ zectranet_remove_project_user:
 zectranet_approve_project_membership_request:
     pattern: /request/approve/{request_id}
     defaults: { _controller: ZectranetBundle:User:approveContactMembershipRequest }
+
+zectranet_delete_project_request:
+    pattern: /request/delete/{request_id}
+    defaults: { _controller: ZectranetBundle:HeaderForum:deleteRequest }
