--- a/src/ZectranetBundle/Resources/config/routing.yml
+++ b/src/ZectranetBundle/Resources/config/routing.yml
@@ -352,6 +352,12 @@ zectranet_QnA_add_post:
     requirements:
         thread_id: \d+
 
+zectranet_QnA_post_edit:
+    pattern: /QnAForum/editPost/{post_id}
+    defaults: { _controller: ZectranetBundle:QnAForum:editPost }
+    requirements:
+        post_id: \d+
+
 zectranet_accept_request_user_office:
     pattern: /office/{office_id}/acceptRequestUserOffice
     defaults: { _controller: ZectranetBundle:Office:acceptRequestUserOffice }
