--- a/src/ZectranetBundle/Resources/config/routing.yml
+++ b/src/ZectranetBundle/Resources/config/routing.yml
@@ -113,6 +113,29 @@ zectranet_delete_all_notifications:
     path: user/notifications/delete_all
     defaults: { _controller: ZectranetBundle:Notification:deleteAll }
 
+############################################################################
+######################### BEGIN OF OFFICE ROUTINGS #########################
+############################################################################
+
+zectranet_show_office_archive:
+    pattern: /office/{office_id}/showArchive
+    defaults: { _controller: ZectranetBundle:OfficeArchive:index }
+    requirements:
+        office_id: \d+
+
+zectranet_get_office_archive:
+    pattern: /office/{office_id}/getArchive
+    defaults: { _controller: ZectranetBundle:OfficeArchive:getArchive }
+    requirements:
+        office_id: \d+
+
+zectranet_add_project_to_archive:
+    pattern: /office/{office_id}/addToArchive/{project_id}
+    defaults: { _controller: ZectranetBundle:OfficeArchive:addToArchive }
+    requirements:
+        office_id: \d+
+        project_id: \d+
+
 zectranet_show_office:
     pattern: /office/{office_id}/{conversation_id}
     defaults: { _controller: ZectranetBundle:Office:index, conversation_id: 0 }
@@ -177,10 +200,9 @@ zectranet_office_get_post:
     requirements:
         office_id: \d+
 
-zectranet_add_project_to_archive:
-    pattern: /office/{office_id}/addToArchive/{project_id}
-    defaults: { _controller: ZectranetBundle:OfficeArchive:addToArchive }
-
+############################################################################
+######################### END OF OFFICE ROUTINGS ###########################
+############################################################################
 
 zectranet_show_project:
     pattern: /project/{project_id}
