--- a/src/ZectranetBundle/Resources/config/routing.yml
+++ b/src/ZectranetBundle/Resources/config/routing.yml
@@ -681,6 +681,10 @@ zectranet_quick_search:
     pattern: /quick_search
     defaults: { _controller: ZectranetBundle:Search:MiniSearch }
 
+zectranet_search_page:
+    pattern: /search/{slug}
+    defaults: { _controller: ZectranetBundle:Search:Search, slug: null }
+
 ##################################################################################
 ########################## END OF SEARCH ROUTINGS ################################
 ##################################################################################
